fix bottom status bar covering dtes

--- a/example-vault/rich-foot-example/.obsidian/plugins/rich-foot/styles.css
+++ b/example-vault/rich-foot-example/.obsidian/plugins/rich-foot/styles.css
@@ -7,11 +7,8 @@
 /* ------------------------------ */
 .rich-foot {
     margin-top: 30px !important;
+    margin-bottom: 20px !important;
     padding-top: 10px !important;
-}
-
-.rich-foot > div:not(:last-child) {
-    margin-bottom: 10px;
 }
 
 /* ---------------------- */
